test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_var_init_any.plx
pub fn main(none) i32 {
    x: any = 10
    return 0
}
